--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-app",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "author": "Aaron Tu",
   "license": "MIT",
   "scripts": {
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.29.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
